# mailcrab

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  flydotio_deployment.md  reverse_proxy.md
.github/workflows/: build-docker-image.yml  build.yml  check.yml  release.yml  rust.yml
backend/: Cargo.toml  Cross.toml  build.rs  dist
backend/examples/: crabfeeder.rs  multiple_rcpt_to.rs
backend/src/: error.rs  lib.rs  mail_server.rs  main.rs  storage.rs  tests.rs  types.rs  web_server.rs
backend/src/smtp/: connection.rs  handler.rs  mod.rs  server.rs  tls.rs
charts/mailcrab/: Chart.yaml  README.md  values.yaml
charts/mailcrab/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/mailcrab/templates/tests/: test-connection.yaml
frontend/: Cargo.toml  Trunk.toml  index.html  style.scss
frontend/src/: api.rs  dark_mode.rs  formatted.rs  list.rs  main.rs  message_header.rs  overview.rs  plaintext.rs  types.rs  view.rs  websocket.rs
mailcrab/: Cargo.toml
mailcrab/src/: error.rs  lib.rs  types.rs
mailcrab/src/smtp/: connection.rs  mod.rs  tls.rs
samples/: README.md  cid.email  cid.eml  multipart_alternative_000.eml  multiple_RCPT_TO  multiple_recipients.email  no_from.email  no_from.eml  normal.email  normal.eml  swaks_injects
