[package]
name = "mailcrab-backend"
version = "1.6.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8", features = ["ws"] }
base64ct = { version = "1.6", features = ["alloc"] }
chrono = "0.4"
humansize = "2.0"
mail-parser = "0.10"
mailin = "0.6"
rcgen = "0.13"
rust-embed = "8.0"
rustls-pemfile = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.2", features = ["v4", "serde"] }

[dev-dependencies]
lettre = { version = "0.11", default-features = false, features=[
    "builder",
    "hostname",
    "rustls-tls",
    "smtp-transport",
    "tokio1-rustls-tls",
    "tokio1"
] }
fake = { version = "4.0", features=["derive"]}
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
local-ip-address = "0.6"
futures = "0.3.29"
rand = "0.9"
