[package]
name = "mailcrab-backend"
version = "1.6.2"
edition = "2024"
publish = true
license = "Apache-2.0 OR MIT"
repository = "https://github.com/tweedegolf/mailcrab"
description = "Email test server for development, written in Rust"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
mailcrab = { path = "../mailcrab" }
rust-embed = "8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.2", features = ["v4", "serde"] }

[dev-dependencies]
lettre = { version = "0.11", default-features = false, features=[
    "builder",
    "hostname",
    "rustls-tls",
    "smtp-transport",
    "tokio1-rustls-tls",
    "tokio1"
] }
fake = { version = "4.0", features=["derive"]}
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
