[package]
name = "mailcrab-frontend"
version = "0.10.0"
edition = "2021"
publish = false

[dependencies]
base64 = "0.13"
futures = "0.3"
gloo-console = "0.2"
gloo-net = "0.2"
gloo-utils = "0.1"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-json-wasm = "0.5"
timeago = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Event",
  "EventTarget",
  "NodeList",
  "HtmlLinkElement",
  "HtmlIFrameElement",
  "CssStyleDeclaration",
  "DomTokenList",
  "Element",
  "HtmlElement",
] }
yew = "0.20"
yew-hooks = "0.2"
