[package]
name = "mailcrab-frontend"
version = "1.0.0-alpha.0"
edition = "2021"
publish = false

[dependencies]
base64 = "0.13"
futures = "0.3"
gloo-console = "0.3"
gloo-net = "0.4"
gloo-utils = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-json-wasm = "1.0"
timeago = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "CssStyleDeclaration",
  "DomTokenList",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlIFrameElement",
  "HtmlLinkElement",
  "MediaQueryList",
  "NodeList"
] }
yew = "0.21"
yew-hooks = "0.3"
