[package]
name = "mailcrab-frontend"
version = "1.6.4"
edition = "2024"
publish = false
license = "Apache-2.0 OR MIT"
repository = "https://github.com/tweedegolf/mailcrab"
description = "Email test server for development, written in Rust"

[dependencies]
base64 = "0.22.1"
futures = "0.3"
gloo-console = "0.3"
gloo-net = "0.6"
gloo-utils = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-json-wasm = "1.0"
timeago = "0.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "CssStyleDeclaration",
  "DomTokenList",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlIFrameElement",
  "HtmlLinkElement",
  "MediaQueryList",
  "NodeList",
  "Notification",
  "NotificationOptions",
] }
yew = "0.22"
yew-hooks = "0.4"
