[package]
name = "mailcrab"
version = "1.6.1"
edition = "2024"
publish = true
license = "Apache-2.0 OR MIT"
repository = "https://github.com/tweedegolf/mailcrab"
description = "Email test server for development, written in Rust"

[dependencies]
base64ct = { version = "1.6", features = ["alloc"] }
chrono = "0.4"
humansize = "2.0"
mail-parser = "0.11"
mailin = "0.6"
rcgen = "0.13"
rustls-pemfile = "2.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tokio-util = "0.7"
tracing = "0.1"
uuid = { version = "1.2", features = ["v4", "serde"] }

[dev-dependencies]
lettre = { version = "0.11", default-features = false, features=[
    "builder",
    "hostname",
    "rustls-tls",
    "smtp-transport",
    "tokio1-rustls-tls",
    "tokio1"
] }
fake = { version = "4.0", features=["derive"]}
rand = "0.9"
